--- a/qtdesigner_files/main_gui.ui
+++ b/qtdesigner_files/main_gui.ui
@@ -102,7 +102,7 @@
         <enum>Qt::LeftToRight</enum>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>3</number>
        </property>
        <widget class="QWidget" name="SEM">
         <attribute name="title">
@@ -2165,7 +2165,7 @@
           <string>remove dynamic background</string>
          </property>
         </widget>
-        <widget class="QPushButton" name="pushButton_open_stack">
+        <widget class="QPushButton" name="pushButton_open_EBSD_stack">
          <property name="geometry">
           <rect>
            <x>20</x>
@@ -2175,7 +2175,7 @@
           </rect>
          </property>
          <property name="text">
-          <string>Open stack</string>
+          <string>Open EBSD stack</string>
          </property>
         </widget>
         <widget class="QCheckBox" name="checkBox_remove_static_background">
@@ -2189,81 +2189,6 @@
          </property>
          <property name="text">
           <string>remove static background</string>
-         </property>
-        </widget>
-        <widget class="QLabel" name="label_38">
-         <property name="geometry">
-          <rect>
-           <x>40</x>
-           <y>440</y>
-           <width>101</width>
-           <height>16</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Start point, pixels</string>
-         </property>
-        </widget>
-        <widget class="QLabel" name="label_40">
-         <property name="geometry">
-          <rect>
-           <x>160</x>
-           <y>450</y>
-           <width>31</width>
-           <height>16</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>y0</string>
-         </property>
-        </widget>
-        <widget class="QLabel" name="label_39">
-         <property name="geometry">
-          <rect>
-           <x>160</x>
-           <y>430</y>
-           <width>31</width>
-           <height>16</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>x0</string>
-         </property>
-        </widget>
-        <widget class="QSpinBox" name="spinBox_y0">
-         <property name="geometry">
-          <rect>
-           <x>180</x>
-           <y>450</y>
-           <width>61</width>
-           <height>22</height>
-          </rect>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>8</pointsize>
-          </font>
-         </property>
-         <property name="maximum">
-          <number>5000</number>
-         </property>
-        </widget>
-        <widget class="QSpinBox" name="spinBox_x0">
-         <property name="geometry">
-          <rect>
-           <x>180</x>
-           <y>430</y>
-           <width>61</width>
-           <height>22</height>
-          </rect>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>8</pointsize>
-          </font>
-         </property>
-         <property name="maximum">
-          <number>5000</number>
          </property>
         </widget>
         <widget class="QComboBox" name="comboBox_image_convention">
@@ -2290,6 +2215,19 @@
            <string>TEM convention</string>
           </property>
          </item>
+        </widget>
+        <widget class="QPushButton" name="pushButton_open_EBSD_file">
+         <property name="geometry">
+          <rect>
+           <x>170</x>
+           <y>230</y>
+           <width>131</width>
+           <height>28</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Open EBSD file</string>
+         </property>
         </widget>
        </widget>
       </widget>
